asteria/core/tests/errors/elaboration_errors/constructor_pattern_does_not_inhabit_check_type.asteriacore
data A;;
data B;;
data Ix [a : Type] where
   | MkA : Test$Ix(Test$A())
   | MkB : Test$Ix(Test$B())
   ;;

x : forall {a : Type}. a
  = case MkA(;) : Test$Ix(Test$A()) of
       | MkB(;) -> Test$x
       ;;
